Pending changes exported from your codespace

--- a/exercises/04-list-of-reasons/index.html
+++ b/exercises/04-list-of-reasons/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>This title shows on the browser tab</title>
-  </head>
-  <body>
-    <!-- your code here -->
-    
-  </body>
+	<head>
+		<title>This title shows on the browser tab</title>
+	</head>
+	<body>
+		<!-- your code here -->
+		<ol>
+			<li>Están en demanda</li>
+			<li>Comodidad</li>
+			<li>Oportunidades de trabajo</li>
+			<li>Creativo</li>
+			<li>Flexibilidad</li>
+			<li>Buena gama de resultados de trabajo</li>
+		</ol>
+	</body>
 </html>
