--- a/exercises/13-image-with-text/index.html
+++ b/exercises/13-image-with-text/index.html
@@ -5,6 +5,14 @@
 	</head>
 	<body>
 		<!-- your code here -->
-		
+		<table border="0">
+			<tr>
+				<td width="25%"><img width="100%" src="../../.learn/assets/13-images-with-text.jpg" alt=""/></td>
+				<td valign="top">
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem asperiores consequatur saepe non quisquam. Fugiat, quibusdam tenetur
+					alias eveniet eaque deleniti natus ea doloribus labore et accusantium magnam, facere quidem?
+				</td>
+			</tr>
+		</table>
 	</body>
 </html>
